Changed url to match .md format

--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -113,7 +113,7 @@ R 스크립트를 실행하고 나면 X1이라는 사용 불가능한 열을 제
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars17.png)
 
-오른쪽 아래의 화살표를 눌러 2번째 페이지로 이동하여 Data Source URL에 "http://azuremlsamples.azureml.net/templatedata/Text - Sentiment Stopwords.tsv"(따옴표는 빼고 입력)를 입력하고 Data format을 TSV로 변경합니다. (*다른 모듈에 연결하지 않고 다음 스텝으로 넘어가세요)
+오른쪽 아래의 화살표를 눌러 2번째 페이지로 이동하여 Data Source URL에 [](http://azuremlsamples.azureml.net/templatedata/Text - Sentiment Stopwords.tsv)를 입력하고 Data format을 TSV로 변경합니다. (*다른 모듈에 연결하지 않고 다음 스텝으로 넘어가세요)
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars18.png)
 
