--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -74,7 +74,7 @@ dfoutput <- data.frame(df$id, df$severity, do.call(rbind, splitdata))
 maml.mapOutputPort("dfoutput");
 ```
 
-이 스크립트가 하는 일 : df가 입력 포트 1에서 데이터 프레임을 가져올 것입니다. 이러한 입력 포트 숫자는 Dataset 아이템에서 선들을 연결할 때 볼 수 있고, 해당 코드에 알맞게 선을 연결해야 합니다. 이 경우, Port \#1에 선을 연결해주어야 합니다. 그러면 가변 splitdata를 생성할 수 있는데 여기에서 || 구분자를 포함하고 있는 logMessage 열을 선택하여 스트링 분할을 수행합니다. 여기서 logMessage는 **||**를 기준으로 두 String으로 쪼갤 수 있습니다. 그 다음 데이터를 ID, 심각도, splitdata 기능과 결합하여 기능을 실행합니다.
+이 스크립트가 하는 일 : df가 입력 포트 1에서 데이터 프레임을 가져올 것입니다. 이러한 입력 포트 숫자는 Dataset 아이템에서 선들을 연결할 때 볼 수 있고, 해당 코드에 알맞게 선을 연결해야 합니다. 이 경우, Port \#1에 선을 연결해주어야 합니다. 그러면 가변 splitdata를 생성할 수 있는데 여기에서 **||** 구분자를 포함하고 있는 logMessage 열을 선택하여 스트링 분할을 수행합니다. 여기서 logMessage는 **||**를 기준으로 두 String으로 쪼갤 수 있습니다. 그 다음 데이터를 ID, 심각도, splitdata 기능과 결합하여 기능을 실행합니다.
 
 하단바에서 Save를 클릭하여 저장한 후 Run을 클릭합니다.
 
@@ -113,7 +113,7 @@ R 스크립트를 실행하고 나면 X1이라는 사용 불가능한 열을 제
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars17.png)
 
-오른쪽 아래의 화살표를 눌러 2번째 페이지로 이동하여 Data Source URL에 [](http://azuremlsamples.azureml.net/templatedata/Text - Sentiment Stopwords.tsv)를 입력하고 Data format을 TSV로 변경합니다. (*다른 모듈에 연결하지 않고 다음 스텝으로 넘어가세요)
+오른쪽 아래의 화살표를 눌러 2번째 페이지로 이동하여 Data Source URL에 <http://azuremlsamples.azureml.net/templatedata/Text - Sentiment Stopwords.tsv>를 입력하고 Data format을 TSV로 변경합니다. (*다른 모듈에 연결하지 않고 다음 스텝으로 넘어가세요)
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars18.png)
 
