--- a/2.Mission2.md
+++ b/2.Mission2.md
@@ -13,7 +13,7 @@
   ![](http://postfiles4.naver.net/MjAxNzA1MThfOTYg/MDAxNDk1MDg0NDgxNjkz.S1vmk2rp8mtQyZNzcYs8esvxZoMKWfLwyg71PS6NhGIg.8B19w1iYU6u8GPikWzAojzxx_Wuvm-xkN7IAFDHZJ2Yg.PNG.lifeteller/Mission2_1.png?type=w2)
 
 ## Select column in Dataset
-Select column in Dataset을 왼쪽 패널에서 가져온 후 Launch column seletcor에서 text_column을 Exclude 해주세요. 이 것을 하는 이유는 hashing feature가 이미 모든 텍스트를 계산 가능한 integer로 변환하였기 때문입니다. 따라서 우리는 더 이상 원본 텍스트가 필요하지 않습니다.
+Select column in Dataset을 왼쪽 패널에서 가져온 후 Launch column selector에서 text_column을 Exclude 해주세요. 이 것을 하는 이유는 hashing feature가 이미 모든 텍스트를 계산 가능한 integer로 변환하였기 때문입니다. 따라서 우리는 더 이상 원본 텍스트가 필요하지 않습니다.
 ![](http://postfiles10.naver.net/MjAxNzA1MThfMTA2/MDAxNDk1MDg0NDgyMDIx.MpasH6ORcJ62HUHem9rrLBvS6H68eT9Soh8JPGWYQbog.CkDrzfFV2Zq749vMGOIUiQwzXTjV0t1o4ZtIfeUo_LUg.PNG.lifeteller/Mission2_2.png?type=w2)
 
 ## Training Data
