--- a/0.Mission Mars 소개.md
+++ b/0.Mission Mars 소개.md
@@ -1,15 +1,19 @@
-# 미션 요약
-화성으로 간 귀하와 팀원들의 생사는 우주선이 제대로 잘 작동하는지에 달려 있습니다. 귀하가 해결해야 할 과제는 우주선이 양호한 상태를 유지하게 만드는 일인데, 예기치 못한 오류가 발생하지 말라는 법은 없습니다. 따라서 시스템이 기록한 수 많은 로그를 활용해 오류를 파악해야 합니다. 지금까지는 우주선을 Azure에 연결하여 심각도에 따라 오류 로그를 파악하는 과제를 수행했는데 이제부터는 스마트 예측 시스템을 배포해 로그를 파악하고 심각도에 따라 표시해야 합니다. 이전 미션에서 생성된 로그와 심각도에 따른 표시 정보(심각도 1 ~ 3은 Low, 심각도 4 ~ 6은 High)는 확보되어 있습니다.
+## Mission 요약
 
-## 미션 목표
-Azure Machine Learning 솔루션을 배포해 새로 유입되는 로그의 심각도를 파악하도록 시스템을 훈련해 시스템이 입력을 추출할 뿐 아니라 심각도를 예측 및 파악할 수 있도록 해야 합니다. 로그의 심각도가 높음으로 파악될 경우에는 이를 명령 센터에 알려 가능한 해결책을 강구해야 합니다.
-이 미션을 통해 간단한 R 데이터 클렌징 및 분류 알고리즘을 이해하게 될 것입니다.
+당신은 팀원들과 함께 이제 화성으로 떠나게 됩니다. 당신과 팀원들의 생사가 우주선이 제대로 작동하는지에 달려 있습니다. 무사히 지구로 귀환하기 위해서는 우주선이 양호한 상태를 유지하도록 만들어야 하는데, 예기치 못한 오류가 발생할 수도 있습니다. 이를 방지하기 위해 시스템에 기록된 수 많은 로그를 활용하여 오류를 파악해야 합니다. 지금까지는 우주선을 Azure에 연결하여 심각도에 따라 오류 로그를 파악하는 과제를 수행했습니다. 오늘 Mission Mars에서 수행하실 과제는 스마트 예측 시스템을 배포해 로그를 파악하고 심각도에 따라 표시하는 것 입니다. 이전 미션에서 생성된 로그와 심각도에 따른 표시 정보(심각도 1 ~ 3 : Low / 심각도 4 ~ 6 : High)는 이미 확보되어 있습니다.
 
-# 미션 
-귀하의 머신 러닝 솔루션은 시스템을 훈련할 수 있어야 하고 심각도를 1~6으로 분류할 수 있어야 합니다.
+## Mission 목표
 
-[미션 1](https://github.com/APAC-EVENT/Mission-Mars/blob/master/1.Mission1.md) : 로그가 기대만큼 깨끗하지 않으므로 시스템을 훈련하기 전에 먼저 R 언어 / 모듈을 이용하고 주어진 포맷에 따라 입력을 사전 처리해야 합니다.
+Azure Machine Learning 솔루션을 배포해 새로 유입되는 로그의 심각도를 파악하도록 시스템을 학습시켜서 입력을 추출할 뿐만 아니라 심각도를 예측하고 파악할 수 있게 해야합니다. 로그의 심각도가 **높음**으로 파악될 경우에는 이를 관제 센터에 알려서 해결책을 마련할 수 있게 해야합니다.
+이번 미션을 통해서 데이터 분석에 많이 쓰이는 언어인 R을 이용하여 간단한 실습을 진행해 볼 예정이며, 데이터 클렌징 작업을 수행하고 분류 알고리즘을 이해할 수 있게 됩니다. 
 
-[미션 2](https://github.com/APAC-EVENT/Mission-Mars/blob/master/2.Mission2.md) : 데이터를 훈련하고 예측을 도출한 뒤 프로젝트를 웹서비스 형태로 게시해야 합니다.
+## Mission 설명
 
-[과제](https://github.com/APAC-EVENT/Mission-Mars/blob/master/3.Challenge.md): 서로 다른 분류 알고리즘을 활용한 실험으로 정확도를 높여야 합니다.
+앞으로 여러분이 만들게 될 Machine Learning 솔루션을 통해 시스템을 학습시킬 수 있어야 하며, 심각도를 1 에서 6사이의 수치로 분류할 수 있어야 합니다.
+
+### Mission 안내
+
+* [Mission 1](https://github.com/APAC-EVENT/Mission-Mars/blob/master/1.Mission1.md) : 로그가 기대만큼 깨끗하지 않으므로 시스템을 학습시키기 전에 먼저 R 언어 및 모듈을 이용하여 주어진 양식에 따라 입력할 데이터에 사전 처리 작업을 해주어야 합니다.
+* [Mission 2](https://github.com/APAC-EVENT/Mission-Mars/blob/master/2.Mission2.md) : 데이터를 학습시키고 이를 바탕으로 예측 모델을 만든 후 프로젝트를 웹서비스로 게시합니다.
+* [Challenge](https://github.com/APAC-EVENT/Mission-Mars/blob/master/3.Challenge.md): 서로 다른 분류 알고리즘을 사용하여 예측 모델의 정확도를 높여야 합니다.
+
