mission1 misspell correct

--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -7,13 +7,14 @@
 
 ### Azure Machine Learning Studio 접속
 
-* [studio.azureml.net](http://studio.azureml.net)에 접속하시기 바랍니다. 무료로 Azure Machine Learning을 사용해볼 수 있는 계정을 만드실 수 있습니다. 
+1. [studio.azureml.net](http://studio.azureml.net) 접속
+: Azure ML Studio에 접속하시기 바랍니다. 무료로 Azure Machine Learning을 사용해볼 수 있는 계정을 만드실 수 있습니다. 
 
-1.	**Sign up** 클릭
+2.	**Sign up** 클릭
 
 ![1_01](/images/1_01.PNG)
 
-2.	두번째 **Free Workspace** 선택
+3.	두번째 **Free Workspace** 선택
 : Microsoft 계정(ex. outlook.com 이나 hotmail.com 메일 계정)이 있으신 경우 "Sign In" 버튼을 눌러서 로그인 하시고, 없으신 경우 "Sign up here"을 눌러서 Microsoft 계정을 새로 생성하시기 바랍니다.
 
 ![1_02](/images/1_02.PNG)
@@ -37,7 +38,7 @@
 
 이제 Mission Mars를 시작할 준비가 모두 다 되었습니다. 오늘 실습할 내용의 전체적인 Workflow는 다음과 같으니 참고해주세요!
 
-![1_07](/images/1_07.jpg
+![1_07](/images/1_07.jpg)
 
 ## 새로운 실험 추가
 
