--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -42,34 +42,40 @@
 
 ## 새로운 실험 추가
 
-“New” -> “Experiment” 탭 -> “Blank Experiment”를 차례로 클릭하여 새로운 실험을 생성할 수 있습니다. 
+위에서 했던 것과 마찬가지 방법으로, **NEW -> EXPERIMENT -> Blank Experiment**를 차례로 클릭하여 새로운 실험을 생성할 수 있습니다. 
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars04.png)
+![1_08](/images/1_08.PNG)
 
-새로운 실험을 생성하면 대시보드로 리디렉션되는데, 여기에서 3개의 패널을 볼 수 있습니다. 왼쪽에 있는 패널은 실험 아이템 목록이 될 패널로, 데이터 입력 및 출력 삽입 또는 웹 서비스 모듈을 비롯해 실험 진행에 필요한 모든 모듈을 포함하고 있습니다.
+새로운 실험을 생성하면 화면이 전환되면서 직접 Machine Learning 모델을 만들고 테스트 해볼 수 있는 공간인 대시보드로 이동됩니다. 이 화면은 크게 3가지 패널로 구성되어 있습니다. 
 
-대시보드 중간에 있는 패널에서는 왼쪽 패널에 있는 아이템을 드래그 앤 드롭하여 이동시키고 각각의 아이템을 서로 연결하며 추가 설정/시각화를 확인할 수 있습니다.
+왼쪽에 위치한 패널에는 Machine Learning 모델을 만드는 데 사용할 수 있는 여러가지 아이템 목록이 나열되어 있습니다. 데이터 입력, 출력, 삽입, 웹 서비스 추가 등을 비롯한 다양한 모듈을 포함하고 있습니다.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars05.png)
+대시보드 중간에 있는 패널은 실제 모델을 구성하고 테스트 해볼 수 있는 공간입니다. 왼쪽 패널에 위치한 아이템들을 드래그 앤 드롭하는 방식으로 이동시킨 후, 각각의 아이템을 서로 연결하며 모델을 구성합니다. 
+
+오른쪽에 위치한 패널에서는 값을 조정하거나, 스크립트를 입력하는 등의 작업을 하실 수 있는 공간입니다. 
+
+![1_09](/images/1_09.PNG)
 
 ## 데이터 세트 삽입
-왼쪽의 아이템 패널에서 Saved Dataset를 선택하여 My Datasets를 선택한 다음, 업로드된 데이터 세트를 클릭할 수 있습니다. 이 아이템을 드래그 앤 드롭하여 대시보드로 옮기거나 그냥 더블 클릭하면 됩니다.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars06.png)
+왼쪽의 아이템 패널에서 **Saved Dataset**를 선택한 후 **My Datasets**를 클릭하시면 이전 과정에서 업로드했던 파일인 **ShipLog.csv** 파일을 확인하실 수 있습니다. 이 아이템을 드래그 앤 드롭하거나 더블 클릭하여 대시보드로 옮기시기 바랍니다.
+
+![1_10](/images/1_10.PNG)
 
 ## 데이터 준비
 ### R 스크립트 실행
-미션 목표는 "logMessage" 열을 분할해 데이터를 클리닝하는 것입니다. 해당 열에 || 구분자가 있다는 정보가 제공될 것입니다. 왼쪽 패널에서 "Execute R Script" 아이템을 검색한 후 선택, 드래그 앤 드롭함으로써 R 스크립트를 사용하여 미션 목표를 달성할 수 있습니다.
+이번 미션 목표는 **logMessage** 열을 분할해 데이터를 정제하는 작업을 하는 것입니다. 아래의 과정에서 R 스크립트를 실행함으로써 || 구분자를 제거하여 미션 목표를 달성할 수 있습니다. 본격적으로 시작해 볼까요?
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars07.png)
+왼쪽 패널에서 **Execute R Script** 아이템을 검색한 후 선택하여, 드래그 앤 드롭하여 대시보드로 이동시킵니다.
 
-데이터 세트의 왼쪽 출력 라인을 R 스크립트의 입력 포트로 드래그하여 데이터 세트를 R 스크립트에 연결합니다.
+![1_11](/images/1_11.PNG)
+![1_12](/images/1_12.PNG)
+
+**ShipLog.csv** 데이터를 **Execute R Script**의 가장 오른쪽 입력값에 연결합니다.
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars08.png)
 
-그 후 오른쪽 패널의 내부 스크립트를 다음과 같이 교체합니다.(기존의 스크립트 완전히 삭제)
-
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars09.png)
+**Execute R Script**를 선택하면 나타나는 오른쪽 패널의 스크립트를 **완전히 삭제**하고 다음의 스크립트로 교체합니다.
 
 ```R
 # Map 1-based optional input ports to variables
@@ -82,11 +88,14 @@ dfoutput <- data.frame(df$id, df$severity, do.call(rbind, splitdata))
 maml.mapOutputPort("dfoutput");
 ```
 
-이 스크립트가 하는 일 : df가 입력 포트 1에서 데이터 프레임을 가져올 것입니다. 이러한 입력 포트 숫자는 Dataset 아이템에서 선들을 연결할 때 볼 수 있고, 해당 코드에 알맞게 선을 연결해야 합니다. 이 경우, Port \#1에 선을 연결해주어야 합니다. 그러면 가변 splitdata를 생성할 수 있는데 여기에서 **||** 구분자를 포함하고 있는 logMessage 열을 선택하여 스트링 분할을 수행합니다. 여기서 logMessage는 **||**를 기준으로 두 String으로 쪼갤 수 있습니다. 그 다음 데이터를 ID, 심각도, splitdata 기능과 결합하여 기능을 실행합니다.
+삭제하고 새로운 스크립트로 교체한 후의 모습은 다음과 같습니다.
+![1_13](/images/1_13.PNG)
 
-하단바에서 Save를 클릭하여 저장한 후 Run을 클릭합니다.
+* 스크립트의 역할: df가 입력 포트 1에서 데이터 프레임을 가져올 것입니다. 이러한 입력 포트 숫자는 Dataset 아이템에서 선들을 연결할 때 볼 수 있고, 해당 코드에 알맞게 선을 연결해야 합니다. 이 경우, Port \#1에 선을 연결해주어야 합니다. 그러면 가변 splitdata를 생성할 수 있는데 여기에서 **||** 구분자를 포함하고 있는 logMessage 열을 선택하여 스트링 분할을 수행합니다. 여기서 logMessage는 **||**를 기준으로 두 String으로 쪼갤 수 있습니다. 그 다음 데이터를 ID, 심각도, splitdata 기능과 결합하여 기능을 실행합니다.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars10.png)
+하단 바에서 **Save**를 클릭하여 저장한 후 **Run**을 클릭하여 실행합니다.
+
+![1_14](/images/1_14.PNG)
 
 그러면 data.frame가 출력됩니다.
 
