mission1 img update

--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -97,10 +97,18 @@ maml.mapOutputPort("dfoutput");
 
 ![1_14](/images/1_14.PNG)
 
-그러면 data.frame가 출력됩니다.
+수행하고 나면 data.frame가 출력됩니다.
 
 ### 새로운 열 매핑
-R 스크립트를 실행하고 나면 X1이라는 사용 불가능한 열을 제외해야 합니다. "Select Column In Dataset" 모듈을 드래그 앤 드롭하고 R 출력을 이 모듈의 입력에 연결합니다. 참고로, 여기서 생성된 X1과 X2는 아까 전 **||**으로 split한 두 String입니다. 실제 data를 보면 첫째 String은 의미가 없고, 둘째 String만 의미가 있는 문장임을 알 수 있습니다. 하지만 방금 R 코드에서는 두 String의 각자의 이름을 붙여주지 않았기 때문에, 임의로 X1, X2라는 이름이 붙었습니다.
+R 스크립트를 실행하고 난 후에는 **X1**이라는 사용 불가능한 열을 제거해야 합니다. 검색창에서 **Select Column In Dataset** 모듈을 검색합니다. 
+
+![1_15](/images/1_15.PNG)
+
+**Select Column In Dataset** 모듈을 **드래그 앤 드롭**하여 대시보드에 가져다 놓은 후, **Execute R Script**의 출력값을 이 모듈의 입력값으로 연결합니다. 
+
+![1_16](/images/1_16.PNG)
+
+참고로, 여기서 생성된 X1과 X2는 아까 전 **||**으로 split한 두 String입니다. 실제 data를 보면 첫째 String은 의미가 없고, 둘째 String만 의미가 있는 문장임을 알 수 있습니다. 하지만 방금 R 코드에서는 두 String의 각자의 이름을 붙여주지 않았기 때문에, 임의로 X1, X2라는 이름이 붙었습니다.
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars11.png)
 
