--- a/3.Challenge.md
+++ b/3.Challenge.md
@@ -1,14 +1,16 @@
-## 과제(Challenge)
-##미션 정리
+# Challenge
+
+## 미션 정리
 실험을 마쳤다면 이제 남은 과제는 다른 분류 알고리즘을 확인한 뒤 모델을 웹서비스 형태로 게시하는 것입니다.
 
-##다른 분류 모델 확인
+## 다른 분류 모델 확인
 또 다른 분류 모델을 추가할 수 있습니다. 왼쪽 패널에서 또 다른 분류 모델을 드래그하여 다중클래스 결정 포레스트에 연결하는 것과 동일한 방식으로 연결하면 됩니다.
 
 다음 샘플을 참고하십시오.
 ![](http://postfiles11.naver.net/MjAxNzA1MThfMzIg/MDAxNDk1MDg0NDg0NzU1._pGyv6O5cOZ7EMl-nQg8rTkpgDUJVCqIVT6xgJGwYaMg.-RnKNfDIJ5YPx_0a2Iylase_7Nt7eHDWuQ8-xvMdbAsg.PNG.lifeteller/Mission2_9.png?type=w2)
 
-##웹서비스 형태로 게시
+## 웹서비스로 게시
+
 다른 서비스가 이 모델을 사용할 수 있도록 실험을 웹서비스 형태로 손쉽게 게시할 수 있습니다. 새로운 로그 텍스트가 들어올 때마다 웹서비스에 연결하여 심각도를 예측할 수 있으므로 유용합니다. 한번 게시해볼까요?
 두가지 Train Model중 원하는 Train Model 모듈을 선택한 후 SET UP WEB SERVICE를 클릭하세요. 그리고 Predictive Web Service를 선택합니다.
 
@@ -22,11 +24,10 @@
  
 
 축하합니다! 이제 Mission Mars의 모든 미션을 완료하였습니다.
-
 Azure ML Studio의 모듈과 알고리즘에 대해서 궁금하셨다면 아래 링크에서 확인해보세요!
 
-Module : https://msdn.microsoft.com/en-us/library/dn906013.aspx 
+* Module : [https://msdn.microsoft.com/en-us/library/dn906013.aspx](https://msdn.microsoft.com/en-us/library/dn906013.aspx) 
 
-알고리즘 : https://docs.microsoft.com/ko-kr/azure/machine-learning/machine-learning-algorithm-cheat-sheet 
+* 알고리즘 : [https://docs.microsoft.com/ko-kr/azure/machine-learning/machine-learning-algorithm-cheat-sheet](https://msdn.microsoft.com/en-us/library/dn906013.aspx)
 
 이제 완료 선물을 받을 시간입니다! 고생 많으셨어요 😊
