--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -110,18 +110,24 @@ R 스크립트를 실행하고 난 후에는 **X1**이라는 사용 불가능한
 
 * 참고로, 이 스크립트를 실행하면 X1과 X2이 생성됩니다. **||**으로 나눈 두개의 문자열을 의미하며 R 코드에서는 두 String의 각자의 이름을 붙여주지 않았기 때문에, 임의로 X1, X2라는 이름이 붙었습니다. 실제 data를 보면 첫째 String은 의미가 없고, 둘째 String만 의미가 있는 문장임을 알 수 있습니다. 
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars11.png)
+오른쪽 패널에서 **Launch Column selector**를 클릭합니다.
 
-오른쪽 패널에서 Launch Column selector를 클릭한 뒤 "Exclude"를 클릭하고 X1 열을 선택하여 제외합니다. 그러면 X1 열을 제외한 모든 열로 구성된 새로운 출력이 생성됩니다.
+![1_17](/images/1_17.PNG)
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars12.png)
+**WITH rULES** 탭을 선택한 후 **ALL COLUMNS**를 선택합니다. **Exclude -> column names -> X1** 열을 선택하여 제외합니다. 이 작업을 수항하면, X1 열을 제외한 모든 열로 구성된 새로운 출력이 생성됩니다.
 
-하단바에서 Save를 클릭하여 저장한 후 Run을 클릭합니다.(Run selected로 해당 모듈만 실행하셔도 괜찮습니다)
+![1_18](/images/1_18.PNG)
+ 
+하단바의 **Save**를 클릭하여 저장한 후 **Run**을 클릭하여 실행합니다.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars13.png)
+![1_19](/images/1_19.PNG)
 
 ### 메타데이터 편집
-"Edit Metadata"를 드래그하여 대시보드에 드롭한 뒤 열 이름을 변경하고 싶을 경우 오른쪽 패널에서 Launch Column selector 선택한 뒤 df.severity, df.id 및 X2를 포함하도록 선택하십시오.
+
+**Edit Metadata**를 드래그하여 대시보드에 드롭합니다.
+
+
+이름을 변경하고 싶을 경우 오른쪽 패널에서 Launch Column selector 선택한 뒤 df.severity, df.id 및 X2를 포함하도록 선택하십시오.
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars14.png)
 
