--- a/1.Mission1.md
+++ b/1.Mission1.md
@@ -132,16 +132,17 @@ R 스크립트를 실행하고 난 후에는 **X1**이라는 사용 불가능한
 
 ![1_22](/images/1_22.PNG)
 
-이름을 변경을 위해 **WITH RULES -> NO COLUMNS**를 선택한 뒤 **Inclue -> column names**를 선택 후 **df.severity, df.id, X2** 를 입력하십시오.
+이름을 변경을 위해 **WITH RULES** 탭에서 **NO COLUMNS**를 선택한 뒤 **Include -> column names**를 선택 후 **df.severity, df.id, X2** 를 입력한 후 하단의 체크버튼을 클릭하여 작업을 완료하십시오.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars14.png)
+![1_23](/images/1_23.PNG)
 
-이제 New column names 필드에 ID, category 및text를 입력합니다.
+이제 우측의 패널에 **New column names** 필드에 **ID, category, text**를 차례대로 입력합니다.
 
-![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars15.png)
+![1_24](/images/1_24.PNG)
 
 ### Clean Stop Words
-그 다음으로 우리가 해야 할 일은 모든 Stop words 가 제거되도록 텍스트를 Clean하는 것입니다. 우리가 가지고있는 데이터를 보면 텍스트에도 숫자가 표시됩니다. 이 텍스트는  전처리를 사용하여 훈련 데이터에서 제외 해야합니다. 우리는 마이크로소프트에서 제공하는 Stop words를 텍스트 프로세싱 패키지에 연결하는 인풋으로 사용할 것입니다. 
+
+그 다음으로 해야 할 일은 모든 Stop words 가 제거되도록 텍스트를 Clean하는 것입니다. 우리가 가지고있는 데이터를 보면 텍스트에도 숫자가 표시됩니다. 이 텍스트는  전처리를 사용하여 훈련 데이터에서 제외 해야합니다. 우리는 마이크로소프트에서 제공하는 Stop words를 텍스트 프로세싱 패키지에 연결하는 인풋으로 사용할 것입니다. 
 
 ![](https://jyseongfileshare.blob.core.windows.net/images/MissionMars16.png)
 
