--- a/2.Mission2.md
+++ b/2.Mission2.md
@@ -27,7 +27,7 @@ Train Model을 왼쪽 패널에서 가져와 Columns in Dataset의 아웃풋과 
  ![](http://postfiles1.naver.net/MjAxNzA1MThfNzQg/MDAxNDk1MDg0NDgyNTc3.bRkNBL81jgoNDuvE1QhTmfdyH4pgVGQSGHvEjSoMT4Eg.56M-UwsuaI04cMEEryC6E0YYyGELFp9vtxOFtWvj8TQg.PNG.lifeteller/Mission2_4.png?type=w2)
 
 label_column을 include하여도 같은 결과를 얻을 수 있습니다.
-![2_05](/2_05.PNG)
+![2_05](/images/2_05.PNG)
 
 ## 모델 검증
 왼쪽 패널에서 Score 모델을 드래그 앤 드롭하고 트레이닝 모델 결과를 왼쪽 입력에 연결한 뒤 Split Data의 나머지 아웃풋에 동일하게 Feature Hashing과 Select Columns in Data set을 연결한 후 Score Model에 또 다른 입력으로 사용합니다(이 것이 테스트 데이터입니다).
